--- a/composer.json
+++ b/composer.json
@@ -9,6 +9,7 @@
         "ezyang/htmlpurifier": "^4.13",
         "intervention/image": "^2.6",
         "laracasts/flash": "^3.2",
+        "laravel-lang/lang": "^10.1",
         "laravel/framework": "5.4.*",
         "laravel/socialite": "^3.4",
         "laravel/tinker": "~1.0",
