--- a/composer.json
+++ b/composer.json
@@ -28,7 +28,8 @@
 					"app/helpers.php"
 				],
         "classmap": [
-            "database"
+            "database",
+            "app\Libraries"
         ],
         "psr-4": {
             "App\\": "app/"
