--- a/composer.json
+++ b/composer.json
@@ -8,6 +8,7 @@
         "php": ">=5.6.4",
         "ezyang/htmlpurifier": "^4.13",
         "intervention/image": "^2.6",
+        "jenssegers/agent": "^2.6",
         "laracasts/flash": "^3.2",
         "laravel-lang/lang": "^10.1",
         "laravel/framework": "5.4.*",
@@ -29,7 +30,7 @@
 				],
         "classmap": [
             "database",
-            "app\Libraries"
+            "app/Libraries"
         ],
         "psr-4": {
             "App\\": "app/"
